Script JS fb to euro

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 <body>
 
 <script>
+var montant;
+
+montant = prompt('Entrez le montant à convertir en euros :');
+
+document.write('<p>'+(montant*40.3399)+'</p>');
 </script>
 </body>
 </html>
